@@ -1,26 +1,30 @@
-// KeeplyApi.java
 package com.keeply.app.api;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.keeply.app.blob.BlobStore;
 import com.keeply.app.cli.cli;
+import com.keeply.app.database.DatabaseBackup;
 import com.keeply.app.inventory.BackupHistoryDb;
 import com.sun.net.httpserver.Headers;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpServer;
 import io.github.cdimascio.dotenv.Dotenv;
-
+import javax.crypto.Mac;
+import javax.crypto.spec.SecretKeySpec;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.AtomicMoveNotSupportedException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.security.KeyFactory;
 import java.security.KeyPair;
@@ -30,79 +34,102 @@ import java.security.PublicKey;
 import java.security.SecureRandom;
 import java.security.Signature;
 import java.security.spec.X509EncodedKeySpec;
+import java.sql.Connection;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.*;
-import java.util.concurrent.*;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Comparator;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
-
+import static java.nio.file.StandardCopyOption.ATOMIC_MOVE;
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 public final class KeeplyApi {
     private static final ObjectMapper MAPPER = new ObjectMapper();
-
     private static final int MAX_BODY_BYTES = 64 * 1024;
-
     private static final Duration JOB_TTL = Duration.ofHours(6);
     private static final Duration CLEANUP_EVERY = Duration.ofSeconds(30);
-
+    private static final Duration MAX_SCAN_RUNTIME = Duration.ofMinutes(45);
+    private static final Duration SCAN_HEARTBEAT_EVERY = Duration.ofSeconds(2);
+    private static final Duration MAX_SCAN_HEARTBEAT_GAP = Duration.ofMinutes(2);
+    private static final Duration STALE_HISTORY_RUNNING_AGE = Duration.ofMinutes(10);
     private static final String BASE = "/api/keeply";
     private static final String HEALTH = BASE + "/health";
     private static final String HISTORY = BASE + "/history";
     private static final String SCAN = BASE + "/scan";
+    private static final String RESTORE = BASE + "/restore";
+    private static final String FOLDERS = BASE + "/folders";
     private static final String PAIRING = BASE + "/pairing";
     private static final String AGENT = BASE + "/agent";
     private static final String AGENT_CHALLENGE = AGENT + "/challenge";
     private static final String AGENT_LOGIN = AGENT + "/login";
-
     private static final ConcurrentMap<String, ScanJob> JOBS = new ConcurrentHashMap<>();
     private static final ConcurrentMap<String, ChallengeState> CHALLENGES = new ConcurrentHashMap<>();
-
     private static final SecureRandom RANDOM = new SecureRandom();
-
     private static final Duration PAIRING_TTL = Duration.ofMinutes(2);
     private static final Duration CHALLENGE_TTL = Duration.ofMinutes(1);
     private static final Duration AGENT_JWT_TTL = Duration.ofMinutes(15);
-
+    private static final String STATE_KEY_DEVICE_IDENTITY = "agent.device_identity";
+    private static final String STATE_KEY_PAIRING = "agent.pairing_state";
+    private static final String STATE_KEY_LINK = "agent.link_state";
+    private static final String LEGACY_WINDOWS_DEST = "C:\\Temp\\keeply";
+    private static final String DEFAULT_WINDOWS_DEST = "C:\\Users\\angel\\AppData\\Roaming\\Keeply\\backup-store";
     private KeeplyApi() {}
-
     public static void run(String[] args) {
         bootstrapEnv();
+        bootstrapScanStorage();
         Config cfg = parseConfig(args);
-
         ExecutorService httpPool = null;
         ExecutorService scanPool = null;
         ScheduledExecutorService maint = null;
         HttpServer server = null;
         KeeplyWsServer wsServer = null;
+        var stopLatch = new CountDownLatch(1);
 
         try {
-            InetAddress bindAddr = InetAddress.getByName(cfg.bindHost);
-            server = HttpServer.create(new InetSocketAddress(bindAddr, cfg.port), 0);
+            InetAddress bindAddr = InetAddress.getByName(cfg.bindHost());
+            server = HttpServer.create(new InetSocketAddress(bindAddr, cfg.port()), 0);
 
-            if (cfg.wsPort > 0) {
-                wsServer = new KeeplyWsServer(new InetSocketAddress(bindAddr, cfg.wsPort), cfg.token);
+            if (cfg.wsPort() > 0) {
+                wsServer = new KeeplyWsServer(new InetSocketAddress(bindAddr, cfg.wsPort()), cfg.token());
                 wsServer.start();
             }
-
-            httpPool = Executors.newFixedThreadPool(cfg.httpWorkers, namedFactory("keeply-http-"));
-            scanPool = Executors.newFixedThreadPool(cfg.scanWorkers, namedFactory("keeply-scan-"));
-            maint = Executors.newSingleThreadScheduledExecutor(namedFactory("keeply-maint-"));
-
+            httpPool = java.util.concurrent.Executors.newThreadPerTaskExecutor(
+                    Thread.ofVirtual().name("keeply-http-", 0).factory()
+            );
+            scanPool = java.util.concurrent.Executors.newThreadPerTaskExecutor(
+                    Thread.ofVirtual().name("keeply-scan-", 0).factory()
+            );
+            maint = java.util.concurrent.Executors.newSingleThreadScheduledExecutor(
+                    Thread.ofPlatform().name("keeply-maint-", 0).factory()
+            );
             server.setExecutor(httpPool);
-
             KeeplyWsServer finalWsServer = wsServer;
             ExecutorService finalScanPool = scanPool;
-
             server.createContext(HEALTH, ex -> safeHandle(ex, cfg, () -> handleHealth(ex)));
             server.createContext(HISTORY, ex -> safeHandle(ex, cfg, () -> handleHistory(ex)));
             server.createContext(SCAN, ex -> safeHandle(ex, cfg, () -> handleScan(ex, finalScanPool, finalWsServer)));
+            server.createContext(RESTORE, ex -> safeHandle(ex, cfg, () -> handleRestore(ex, finalWsServer)));
+            server.createContext(FOLDERS, ex -> safeHandle(ex, cfg, () -> handleFolders(ex)));
             server.createContext(PAIRING, ex -> safeHandle(ex, cfg, () -> handlePairing(ex)));
             server.createContext(AGENT_CHALLENGE, ex -> safeHandle(ex, cfg, () -> handleAgentChallenge(ex)));
             server.createContext(AGENT_LOGIN, ex -> safeHandle(ex, cfg, () -> handleAgentLogin(ex)));
-
-            // manutenção: jobs + challenges
             maint.scheduleAtFixedRate(
                     () -> {
                         cleanupOldJobs(finalWsServer);
@@ -112,29 +139,8 @@ public final class KeeplyApi {
                     CLEANUP_EVERY.toMillis(),
                     TimeUnit.MILLISECONDS
             );
-
             server.start();
-
-            System.out.println("Keeply API online em http://" + cfg.bindHost + ":" + cfg.port);
-            System.out.println("Endpoints:");
-            System.out.println("  GET    " + HEALTH);
-            System.out.println("  GET    " + HISTORY + "?limit=20");
-            System.out.println("  GET    " + PAIRING);
-            System.out.println("  POST   " + PAIRING + "/rotate");
-            System.out.println("  POST   " + PAIRING + "/request");
-            System.out.println("  POST   " + PAIRING + "/approve");
-            System.out.println("  POST   " + PAIRING + "/mark-linked");
-            System.out.println("  POST   " + PAIRING + "/mark-unlinked");
-            System.out.println("  POST   " + SCAN);
-            System.out.println("  GET    " + SCAN + "/{jobId}");
-            System.out.println("  DELETE " + SCAN + "/{jobId}  (cancel)");
-            System.out.println("  GET    " + AGENT_CHALLENGE + "?deviceId=...");
-            System.out.println("  POST   " + AGENT_LOGIN);
-            if (cfg.wsPort > 0) {
-                System.out.println("WebSocket:");
-                System.out.println("  ws://" + cfg.bindHost + ":" + cfg.wsPort + "/ws/keeply");
-            }
-
+            printStartupInfo(cfg);
             AgentLinkState startupLink = loadAgentLinkState();
             if (!startupLink.paired()) {
                 PairingIssued startupPairing = issuePairingCode();
@@ -149,20 +155,51 @@ public final class KeeplyApi {
             ExecutorService shutdownHttp = httpPool;
             ScheduledExecutorService shutdownMaint = maint;
             KeeplyWsServer shutdownWs = wsServer;
+            Runtime.getRuntime().addShutdownHook(
+                    Thread.ofPlatform().name("keeply-api-shutdown").unstarted(() -> {
+                        try { if (shutdownServer != null) shutdownServer.stop(0); } catch (Exception ignored) {}
+                        try { if (shutdownMaint != null) shutdownMaint.shutdownNow(); } catch (Exception ignored) {}
+                        try { if (shutdownScan != null) shutdownScan.shutdownNow(); } catch (Exception ignored) {}
+                        try { if (shutdownHttp != null) shutdownHttp.shutdownNow(); } catch (Exception ignored) {}
+                        if (shutdownWs != null) {
+                            try { shutdownWs.stop(1000); } catch (Exception ignored) {}
+                        }
+                        stopLatch.countDown();
+                    })
+            );
 
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-                try { if (shutdownServer != null) shutdownServer.stop(0); } catch (Exception ignored) {}
-                try { if (shutdownMaint != null) shutdownMaint.shutdownNow(); } catch (Exception ignored) {}
-                try { if (shutdownScan != null) shutdownScan.shutdownNow(); } catch (Exception ignored) {}
-                try { if (shutdownHttp != null) shutdownHttp.shutdownNow(); } catch (Exception ignored) {}
-                if (shutdownWs != null) {
-                    try { shutdownWs.stop(1000); } catch (Exception ignored) {}
-                }
-            }, "keeply-api-shutdown"));
+            // mantém a JVM viva de forma correta (sem depender de daemon threads)
+            stopLatch.await();
 
+        } catch (InterruptedException ie) {
+            Thread.currentThread().interrupt();
         } catch (Exception e) {
             System.err.println("Falha ao iniciar API: " + safeMsg(e));
             System.exit(1);
+        }
+    }
+
+    private static void printStartupInfo(Config cfg) {
+        System.out.println("Keeply API online em http://" + cfg.bindHost() + ":" + cfg.port());
+        System.out.println("Endpoints:");
+        System.out.println("  GET    " + HEALTH);
+        System.out.println("  GET    " + HISTORY + "?limit=20");
+        System.out.println("  GET    " + PAIRING);
+        System.out.println("  POST   " + PAIRING + "/rotate");
+        System.out.println("  POST   " + PAIRING + "/request");
+        System.out.println("  POST   " + PAIRING + "/approve");
+        System.out.println("  POST   " + PAIRING + "/mark-linked");
+        System.out.println("  POST   " + PAIRING + "/mark-unlinked");
+        System.out.println("  POST   " + SCAN);
+        System.out.println("  GET    " + SCAN + "/{jobId}");
+        System.out.println("  DELETE " + SCAN + "/{jobId}  (cancel)");
+        System.out.println("  POST   " + RESTORE);
+        System.out.println("  GET    " + FOLDERS + "?path=...");
+        System.out.println("  GET    " + AGENT_CHALLENGE + "?deviceId=...");
+        System.out.println("  POST   " + AGENT_LOGIN);
+        if (cfg.wsPort() > 0) {
+            System.out.println("WebSocket:");
+            System.out.println("  ws://" + cfg.bindHost() + ":" + cfg.wsPort() + "/ws/keeply");
         }
     }
 
@@ -188,6 +225,8 @@ public final class KeeplyApi {
         }
 
         int limit = clampInt(parseQuery(ex.getRequestURI()).get("limit"), 20, 1, 200);
+        logInfo("history request from " + clientOf(ex) + " limit=" + limit);
+
         List<BackupHistoryDb.HistoryRow> rows = new ArrayList<>(BackupHistoryDb.listRecent(limit));
 
         ObjectNode out = MAPPER.createObjectNode();
@@ -210,6 +249,7 @@ public final class KeeplyApi {
             putNullable(it, "message", r.message());
         }
 
+        logInfo("history response items=" + rows.size());
         sendJson(ex, 200, out);
     }
 
@@ -219,17 +259,22 @@ public final class KeeplyApi {
         // GET    /scan/{jobId}
         // DELETE /scan/{jobId}
         String path = ex.getRequestURI().getPath();
-
         String rest = path.length() > SCAN.length() ? path.substring(SCAN.length()) : "";
-        if (rest.isBlank() || "/".equals(rest)) {
+
+            if (rest.isBlank() || "/".equals(rest)) {
             if (!isMethod(ex, "POST")) {
                 methodNotAllowed(ex, "POST");
+                return;
+            }
+            String schemaError = ensureScanSchemaReady();
+            if (schemaError != null) {
+                sendError(ex, 503, "scan_storage_unavailable", schemaError);
                 return;
             }
 
             JsonNode body = readJsonBody(ex);
             String root = text(body, "root");
-            String dest = text(body, "dest");
+            String dest = normalizeBackupDestination(text(body, "dest"));
             String password = text(body, "password");
 
             if (isBlank(root) || isBlank(dest)) {
@@ -245,58 +290,10 @@ public final class KeeplyApi {
             ScanJob job = ScanJob.created(jobId, root, dest);
             JOBS.put(jobId, job);
 
+            logInfo("scan enqueue jobId=" + jobId + " root=" + root + " dest=" + dest + " from " + clientOf(ex));
             if (wsServer != null) wsServer.broadcastEvent("scan.created", Map.of("jobId", jobId));
 
-            Future<?> f = scanPool.submit(() -> {
-                job.markRunning();
-                if (wsServer != null) wsServer.broadcastEvent("scan.running", Map.of("jobId", jobId));
-
-                List<String> cliArgs = new ArrayList<>();
-                cliArgs.add("scan");
-                cliArgs.add("--root");
-                cliArgs.add(root);
-                cliArgs.add("--dest");
-                cliArgs.add(dest);
-                if (!isBlank(password)) {
-                    cliArgs.add("--password");
-                    cliArgs.add(password);
-                }
-
-                int exit;
-                try {
-                    exit = cli.execute(cliArgs.toArray(String[]::new));
-                } catch (CancellationException ce) {
-                    job.markCancelled("cancelled");
-                    if (wsServer != null) wsServer.broadcastEvent("scan.cancelled", Map.of("jobId", jobId));
-                    return;
-                } catch (Throwable t) {
-                    exit = 999;
-                    job.markFailed(exit, safeMsg(t));
-                    if (wsServer != null) {
-                        wsServer.broadcastEvent("scan.failed", Map.of(
-                                "jobId", jobId,
-                                "exitCode", exit,
-                                "message", job.message
-                        ));
-                    }
-                    return;
-                }
-
-                if (exit == 0) {
-                    job.markSuccess();
-                    if (wsServer != null) wsServer.broadcastEvent("scan.success", Map.of("jobId", jobId));
-                } else {
-                    job.markFailed(exit, "scan retornou exitCode != 0");
-                    if (wsServer != null) {
-                        wsServer.broadcastEvent("scan.failed", Map.of(
-                                "jobId", jobId,
-                                "exitCode", exit,
-                                "message", job.message
-                        ));
-                    }
-                }
-            });
-
+            Future<?> f = scanPool.submit(() -> runScanJob(job, root, dest, password, wsServer));
             job.attachFuture(f);
 
             ObjectNode out = MAPPER.createObjectNode();
@@ -327,12 +324,14 @@ public final class KeeplyApi {
         }
 
         if (isMethod(ex, "GET")) {
+            logInfo("scan status jobId=" + jobId + " state=" + job.state + " from " + clientOf(ex));
             sendJson(ex, 200, job.toJson());
             return;
         }
 
         if (isMethod(ex, "DELETE")) {
             boolean cancelled = job.cancel();
+            logWarn("scan cancel request jobId=" + jobId + " cancelled=" + cancelled + " from " + clientOf(ex));
 
             ObjectNode out = MAPPER.createObjectNode();
             out.put("ok", true);
@@ -348,6 +347,222 @@ public final class KeeplyApi {
         }
 
         methodNotAllowed(ex, "GET, DELETE");
+    }
+
+    private static void runScanJob(ScanJob job, String root, String dest, String password, KeeplyWsServer wsServer) {
+        job.markRunning();
+        job.touch();
+        logInfo("scan running jobId=" + job.id);
+        if (wsServer != null) wsServer.broadcastEvent("scan.running", Map.of("jobId", job.id));
+
+        List<String> cliArgs = new ArrayList<>();
+        cliArgs.add("scan");
+        cliArgs.add("--root");
+        cliArgs.add(root);
+        cliArgs.add("--dest");
+        cliArgs.add(dest);
+        if (!isBlank(password)) {
+            cliArgs.add("--password");
+            cliArgs.add(password);
+        }
+
+        int exit;
+        try {
+            exit = executeScanCliWithWatchdog(job, cliArgs);
+        } catch (java.util.concurrent.CancellationException ce) {
+            job.markCancelled("cancelled");
+            logWarn("scan cancelled jobId=" + job.id);
+            if (wsServer != null) wsServer.broadcastEvent("scan.cancelled", Map.of("jobId", job.id));
+            return;
+        } catch (java.util.concurrent.TimeoutException te) {
+            exit = 124;
+            job.markFailed(exit, safeMsg(te));
+            logWarn("scan timeout jobId=" + job.id + " msg=" + job.message);
+            if (wsServer != null) {
+                wsServer.broadcastEvent("scan.failed", Map.of(
+                        "jobId", job.id,
+                        "exitCode", exit,
+                        "message", job.message
+                ));
+            }
+            return;
+        } catch (Throwable t) {
+            exit = 999;
+            job.markFailed(exit, safeMsg(t));
+            logWarn("scan failed jobId=" + job.id + " exit=" + exit + " msg=" + job.message);
+            if (wsServer != null) {
+                wsServer.broadcastEvent("scan.failed", Map.of(
+                        "jobId", job.id,
+                        "exitCode", exit,
+                        "message", job.message
+                ));
+            }
+            return;
+        }
+
+        if (exit == 0) {
+            job.markSuccess();
+            logInfo("scan success jobId=" + job.id);
+            if (wsServer != null) wsServer.broadcastEvent("scan.success", Map.of("jobId", job.id));
+        } else {
+            job.markFailed(exit, "scan retornou exitCode != 0");
+            logWarn("scan failed jobId=" + job.id + " exit=" + exit + " msg=" + job.message);
+            if (wsServer != null) {
+                wsServer.broadcastEvent("scan.failed", Map.of(
+                        "jobId", job.id,
+                        "exitCode", exit,
+                        "message", job.message
+                ));
+            }
+        }
+    }
+
+    private static void handleRestore(HttpExchange ex, KeeplyWsServer wsServer) throws IOException {
+        if (!isMethod(ex, "POST")) {
+            methodNotAllowed(ex, "POST");
+            return;
+        }
+
+        JsonNode body = readJsonBody(ex);
+        String backupId = text(body, "backupId");
+        String targetMode = text(body, "targetMode");
+        String targetPath = text(body, "targetPath");
+        String deviceId = text(body, "deviceId");
+        Long scanId = longOrNull(body, "scanId");
+        if (scanId == null) {
+            try { scanId = Long.parseLong(nvl(backupId).trim()); }
+            catch (Exception ignored) { scanId = null; }
+        }
+        if (scanId == null || scanId <= 0) {
+            sendError(ex, 400, "bad_request", "Informe backupId/scanId numerico valido");
+            return;
+        }
+
+        BackupHistoryDb.HistoryRow row = BackupHistoryDb.findByScanId(scanId);
+        if (row == null) {
+            sendError(ex, 404, "not_found", "Nao encontrei backup_history para scanId informado");
+            return;
+        }
+        if (isBlank(row.destPath()) || isBlank(row.rootPath())) {
+            sendError(ex, 400, "bad_request", "Backup sem root/dest no historico");
+            return;
+        }
+
+        BlobStore.RestoreMode mode;
+        if ("original".equalsIgnoreCase(targetMode) || isBlank(targetMode)) mode = BlobStore.RestoreMode.ORIGINAL_PATH;
+        else mode = BlobStore.RestoreMode.DEST_WITH_STRUCTURE;
+
+        Path baseDir = Path.of(row.destPath()).toAbsolutePath().normalize();
+        Path originalRoot = Path.of(row.rootPath()).toAbsolutePath().normalize();
+        Path destinationDir = null;
+        if (mode != BlobStore.RestoreMode.ORIGINAL_PATH) {
+            if (isBlank(targetPath)) {
+                sendError(ex, 400, "bad_request", "targetPath obrigatorio para restore em outro local");
+                return;
+            }
+            destinationDir = Path.of(targetPath).toAbsolutePath().normalize();
+        }
+
+        logInfo("restore running scanId=" + scanId + " mode=" + mode + " from " + clientOf(ex)
+                + " baseDir=" + baseDir + " target=" + (destinationDir == null ? originalRoot : destinationDir)
+                + " deviceId=" + nvl(deviceId));
+        if (wsServer != null) {
+            wsServer.broadcastEvent("restore.running", Map.of(
+                    "scanId", scanId,
+                    "mode", mode.name(),
+                    "ts", Instant.now().toString()
+            ));
+        }
+
+        try {
+            long finalScanId = scanId;
+            BlobStore.RestoreResult result = BlobStore.restoreChangedFilesFromScan(
+                    scanId,
+                    baseDir,
+                    destinationDir,
+                    originalRoot,
+                    mode,
+                    new AtomicBoolean(false),
+                    msg -> logInfo("restore[" + finalScanId + "] " + msg)
+            );
+
+            ObjectNode out = MAPPER.createObjectNode();
+            out.put("ok", true);
+            out.put("scanId", scanId);
+            out.put("mode", mode.name());
+            out.put("filesRestored", result.filesRestored());
+            out.put("errors", result.errors());
+            sendJson(ex, 200, out);
+
+            if (wsServer != null) {
+                wsServer.broadcastEvent("restore.success", Map.of(
+                        "scanId", scanId,
+                        "filesRestored", result.filesRestored(),
+                        "errors", result.errors(),
+                        "ts", Instant.now().toString()
+                ));
+            }
+            logInfo("restore success scanId=" + scanId + " files=" + result.filesRestored() + " errors=" + result.errors());
+        } catch (Exception e) {
+            logWarn("restore failed scanId=" + scanId + " msg=" + safeMsg(e));
+            if (wsServer != null) {
+                wsServer.broadcastEvent("restore.failed", Map.of(
+                        "scanId", scanId,
+                        "message", safeMsg(e),
+                        "ts", Instant.now().toString()
+                ));
+            }
+            sendError(ex, 500, "restore_failed", safeMsg(e));
+        }
+    }
+
+    private static void handleFolders(HttpExchange ex) throws IOException {
+        if (!isMethod(ex, "GET")) {
+            methodNotAllowed(ex, "GET");
+            return;
+        }
+
+        String rawPath = parseQuery(ex.getRequestURI()).get("path");
+        Path current;
+        try {
+            current = isBlank(rawPath) ? Path.of(System.getProperty("user.home")) : Path.of(rawPath);
+            current = current.toAbsolutePath().normalize();
+        } catch (Exception e) {
+            sendError(ex, 400, "bad_request", "path invalido");
+            return;
+        }
+
+        if (!Files.exists(current) || !Files.isDirectory(current)) {
+            sendError(ex, 404, "not_found", "pasta nao encontrada");
+            return;
+        }
+
+        ObjectNode out = MAPPER.createObjectNode();
+        out.put("ok", true);
+        out.put("current", current.toString());
+        out.put("parent", current.getParent() == null ? "" : current.getParent().toString());
+        ArrayNode items = out.putArray("items");
+
+        try (var stream = Files.list(current)) {
+            stream
+                    .filter(Files::isDirectory)
+                    .sorted(Comparator.comparing(
+                            p -> p.getFileName() == null ? p.toString() : p.getFileName().toString(),
+                            String.CASE_INSENSITIVE_ORDER
+                    ))
+                    .limit(300)
+                    .forEach(p -> {
+                        ObjectNode it = items.addObject();
+                        it.put("name", p.getFileName() == null ? p.toString() : p.getFileName().toString());
+                        it.put("path", p.toAbsolutePath().normalize().toString());
+                    });
+        } catch (Exception e) {
+            sendError(ex, 500, "list_failed", safeMsg(e));
+            return;
+        }
+
+        logInfo("folders list from " + clientOf(ex) + " current=" + current + " items=" + items.size());
+        sendJson(ex, 200, out);
     }
 
     private static void handlePairing(HttpExchange ex) throws IOException {
@@ -476,7 +691,9 @@ public final class KeeplyApi {
                 sendError(ex, 409, "pairing_already_used", "Codigo de pairing ja consumido");
                 return;
             }
-            if (!timingSafeEquals(sha256Hex(state.salt() + ":" + informedCode), state.codeHash())) {
+
+            String expected = sha256Hex(state.salt() + ":" + informedCode);
+            if (!timingSafeEquals(expected, state.codeHash())) {
                 sendError(ex, 400, "pairing_code_invalid", "Codigo invalido");
                 return;
             }
@@ -662,7 +879,7 @@ public final class KeeplyApi {
     private interface Handler { void handle() throws Exception; }
 
     private static boolean authorize(HttpExchange ex, Config cfg) {
-        if (!cfg.authEnabled) return true;
+        if (!cfg.authEnabled()) return true;
 
         String auth = firstHeader(ex.getRequestHeaders(), "Authorization");
         if (isBlank(auth)) return false;
@@ -670,7 +887,7 @@ public final class KeeplyApi {
         String token = auth.trim();
         if (token.regionMatches(true, 0, "bearer ", 0, 7)) token = token.substring(7).trim();
 
-        String expected = cfg.token == null ? "" : cfg.token;
+        String expected = cfg.token() == null ? "" : cfg.token();
         return timingSafeEquals(token, expected);
     }
 
@@ -719,15 +936,15 @@ public final class KeeplyApi {
 
         byte[] data = readAllBytesLimited(ex.getRequestBody(), MAX_BODY_BYTES);
         if (data.length == 0) return MAPPER.createObjectNode();
-        return MAPPER.readTree(new String(data, StandardCharsets.UTF_8));
+        return MAPPER.readTree(data);
     }
 
     private static byte[] readAllBytesLimited(InputStream in, int limit) throws IOException {
         byte[] buf = new byte[8192];
         int read;
         int total = 0;
-        java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
 
+        ByteArrayOutputStream out = new ByteArrayOutputStream(Math.min(limit, 16 * 1024));
         while ((read = in.read(buf)) != -1) {
             total += read;
             if (total > limit) throw new IllegalArgumentException("Body excede limite de " + limit + " bytes");
@@ -747,6 +964,30 @@ public final class KeeplyApi {
             ScanJob j = e.getValue();
             if (j == null) continue;
 
+            if ("running".equals(j.state)) {
+                Instant started = j.startedAt == null ? j.createdAt : j.startedAt;
+                Instant heartbeat = j.lastHeartbeatAt == null ? started : j.lastHeartbeatAt;
+                boolean runtimeExceeded = started.plus(MAX_SCAN_RUNTIME).isBefore(now);
+                boolean heartbeatLost = heartbeat.plus(MAX_SCAN_HEARTBEAT_GAP).isBefore(now);
+
+                if (runtimeExceeded || heartbeatLost) {
+                    String msg = runtimeExceeded
+                            ? "scan timeout (" + MAX_SCAN_RUNTIME.toMinutes() + " min)"
+                            : "scan heartbeat timeout";
+                    boolean changed = j.markFailed(124, msg);
+                    Future<?> f = j.future;
+                    if (f != null) f.cancel(true);
+
+                    if (changed && wsServer != null) {
+                        wsServer.broadcastEvent("scan.failed", Map.of(
+                                "jobId", j.id,
+                                "exitCode", 124,
+                                "message", msg
+                        ));
+                    }
+                }
+            }
+
             boolean done = !"running".equals(j.state);
             Instant ref = (j.finishedAt != null) ? j.finishedAt : j.createdAt;
 
@@ -764,6 +1005,100 @@ public final class KeeplyApi {
         for (var e : CHALLENGES.entrySet()) {
             ChallengeState st = e.getValue();
             if (st == null || st.isExpired()) CHALLENGES.remove(e.getKey(), st);
+        }
+    }
+
+    private static int executeScanCliWithWatchdog(ScanJob job, List<String> cliArgs) throws Exception {
+        ExecutorService runner = java.util.concurrent.Executors.newSingleThreadExecutor(
+                Thread.ofVirtual().name("keeply-scan-cli-", 0).factory()
+        );
+        Future<Integer> task = null;
+        Instant deadline = Instant.now().plus(MAX_SCAN_RUNTIME);
+
+        try {
+            task = runner.submit(() -> cli.executeEmbedded(cliArgs.toArray(String[]::new)));
+            while (true) {
+                try {
+                    int exit = task.get(SCAN_HEARTBEAT_EVERY.toMillis(), TimeUnit.MILLISECONDS);
+                    job.touch();
+                    return exit;
+                } catch (java.util.concurrent.TimeoutException ignored) {
+                    job.touch();
+                    if (Instant.now().isAfter(deadline)) {
+                        task.cancel(true);
+                        throw new java.util.concurrent.TimeoutException(
+                                "scan excedeu limite de " + MAX_SCAN_RUNTIME.toMinutes() + " minutos"
+                        );
+                    }
+                }
+            }
+        } finally {
+            if (task != null && !task.isDone()) task.cancel(true);
+            runner.shutdownNow();
+        }
+    }
+
+    private static void bootstrapScanStorage() {
+        try {
+            BackupHistoryDb.init();
+            ensureAgentStateStore();
+            int fixed = BackupHistoryDb.recoverStaleRunning(
+                    STALE_HISTORY_RUNNING_AGE,
+                    "stale job recovered on boot"
+            );
+            if (fixed > 0) {
+                logWarn("scan startup recovery: " + fixed + " RUNNING antigos marcados como ERROR");
+            }
+            String schemaError = ensureScanSchemaReady();
+            if (schemaError != null) {
+                logWarn("scan schema check failed on startup: " + schemaError);
+            }
+        } catch (Exception e) {
+            logWarn("scan startup bootstrap failed: " + safeMsg(e));
+        }
+    }
+
+    private static void ensureAgentStateStore() {
+        try (Connection c = DatabaseBackup.openSingleConnection();
+             PreparedStatement ps = c.prepareStatement("""
+                     CREATE TABLE IF NOT EXISTS agent_state (
+                         state_key TEXT PRIMARY KEY,
+                         json_value TEXT NOT NULL,
+                         updated_at TEXT NOT NULL DEFAULT (datetime('now'))
+                     )
+                     """)) {
+            ps.execute();
+        } catch (Exception e) {
+            throw new IllegalStateException("Falha ao preparar tabela agent_state: " + safeMsg(e), e);
+        }
+    }
+
+    private static String ensureScanSchemaReady() {
+        try {
+            BackupHistoryDb.init();
+            DatabaseBackup.init();
+
+            try (Connection c = DatabaseBackup.openSingleConnection()) {
+                if (!tableExists(c, "scans")) return "Tabela obrigatoria ausente: scans";
+                if (!tableExists(c, "file_inventory")) return "Tabela obrigatoria ausente: file_inventory";
+                if (!tableExists(c, "file_history")) return "Tabela obrigatoria ausente: file_history";
+            }
+            return null;
+        } catch (Exception e) {
+            return "Falha ao validar schema do scan: " + safeMsg(e);
+        }
+    }
+
+    private static boolean tableExists(Connection c, String tableName) {
+        try (PreparedStatement ps = c.prepareStatement(
+                "SELECT 1 FROM sqlite_master WHERE type='table' AND lower(name)=lower(?) LIMIT 1"
+        )) {
+            ps.setString(1, tableName);
+            try (ResultSet rs = ps.executeQuery()) {
+                return rs.next();
+            }
+        } catch (Exception ignored) {
+            return false;
         }
     }
 
@@ -829,6 +1164,23 @@ public final class KeeplyApi {
         return v == null || v.isBlank();
     }
 
+    private static void logInfo(String message) {
+        System.out.println("[" + Instant.now() + "] [api] " + message);
+    }
+
+    private static void logWarn(String message) {
+        System.err.println("[" + Instant.now() + "] [api] " + message);
+    }
+
+    private static String clientOf(HttpExchange ex) {
+        try {
+            if (ex == null || ex.getRemoteAddress() == null) return "-";
+            return String.valueOf(ex.getRemoteAddress());
+        } catch (Exception ignored) {
+            return "-";
+        }
+    }
+
     private static String safeMsg(Throwable t) {
         return (t.getMessage() == null || t.getMessage().isBlank())
                 ? t.getClass().getSimpleName()
@@ -839,21 +1191,15 @@ public final class KeeplyApi {
         return isBlank(value) ? null : value;
     }
 
-    private static String nvl(String value) {
-        return value == null ? "" : value;
+    private static String normalizeBackupDestination(String dest) {
+        if (isBlank(dest)) return dest;
+        String trimmed = dest.trim();
+        if (LEGACY_WINDOWS_DEST.equalsIgnoreCase(trimmed)) return DEFAULT_WINDOWS_DEST;
+        return trimmed;
     }
 
-    private static ThreadFactory namedFactory(String prefix) {
-        return new ThreadFactory() {
-            private final ThreadFactory base = Executors.defaultThreadFactory();
-            private final AtomicInteger seq = new AtomicInteger(1);
-            @Override public Thread newThread(Runnable r) {
-                Thread t = base.newThread(r);
-                t.setName(prefix + seq.getAndIncrement());
-                t.setDaemon(true);
-                return t;
-            }
-        };
+    private static String nvl(String value) {
+        return value == null ? "" : value;
     }
 
     static boolean timingSafeEquals(String a, String b) {
@@ -866,25 +1212,72 @@ public final class KeeplyApi {
         return r == 0;
     }
 
+    // ----------------- Persistência (atômica) -----------------
+
+    private static void writeJsonAtomic(Path target, JsonNode node) throws IOException {
+        Path parent = target.getParent();
+        if (parent != null) Files.createDirectories(parent);
+
+        Path dir = parent != null ? parent : Path.of(".").toAbsolutePath();
+        String baseName = target.getFileName().toString();
+        Path tmp = Files.createTempFile(dir, baseName, ".tmp");
+
+        boolean moved = false;
+        try {
+            String json = MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node);
+            Files.writeString(tmp, json, StandardCharsets.UTF_8,
+                    StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+
+            try {
+                Files.move(tmp, target, REPLACE_EXISTING, ATOMIC_MOVE);
+            } catch (AtomicMoveNotSupportedException e) {
+                Files.move(tmp, target, REPLACE_EXISTING);
+            }
+            moved = true;
+        } finally {
+            if (!moved) {
+                try { Files.deleteIfExists(tmp); } catch (Exception ignored) {}
+            }
+        }
+    }
+
     // ----------------- Device identity + pairing persistence -----------------
 
     private static DeviceIdentity loadOrCreateDeviceIdentity() {
-        Path path = deviceIdentityFilePath();
+        try {
+            JsonNode dbNode = loadStateJson(STATE_KEY_DEVICE_IDENTITY);
+            String deviceId = text(dbNode, "deviceId");
+            String publicKey = text(dbNode, "publicKey");
+            String privateKey = text(dbNode, "privateKey");
+            if (!isBlank(deviceId) && !isBlank(publicKey) && !isBlank(privateKey)) {
+                return new DeviceIdentity(deviceId, publicKey, privateKey);
+            }
+        } catch (Exception e) {
+            logWarn("Falha ao ler identidade do dispositivo no sqlite: " + safeMsg(e));
+        }
+
+        Path path = deviceIdentityFilePath(); // fallback/migracao legada
         try {
             if (Files.exists(path)) {
-                JsonNode node = MAPPER.readTree(Files.readString(path));
+                JsonNode node = MAPPER.readTree(Files.readString(path, StandardCharsets.UTF_8));
                 String deviceId = text(node, "deviceId");
                 String publicKey = text(node, "publicKey");
                 String privateKey = text(node, "privateKey");
                 if (!isBlank(deviceId) && !isBlank(publicKey) && !isBlank(privateKey)) {
-                    return new DeviceIdentity(deviceId, publicKey, privateKey);
+                    DeviceIdentity legacy = new DeviceIdentity(deviceId, publicKey, privateKey);
+                    saveDeviceIdentity(legacy);
+                    tryDeleteLegacyFile(path);
+                    return legacy;
                 }
             }
-        } catch (Exception ignored) {}
+        } catch (Exception e) {
+            logWarn("Falha ao ler identidade do dispositivo legado: " + safeMsg(e));
+        }
 
         try {
             KeyPairGenerator kpg = KeyPairGenerator.getInstance("Ed25519");
             KeyPair kp = kpg.generateKeyPair();
+
             DeviceIdentity created = new DeviceIdentity(
                     UUID.randomUUID().toString(),
                     Base64.getEncoder().encodeToString(kp.getPublic().getEncoded()),
@@ -898,29 +1291,20 @@ public final class KeeplyApi {
     }
 
     private static void saveDeviceIdentity(DeviceIdentity identity) {
-        Path path = deviceIdentityFilePath();
         try {
-            Path parent = path.getParent();
-            if (parent != null) Files.createDirectories(parent);
             ObjectNode node = MAPPER.createObjectNode();
             node.put("deviceId", identity.deviceId());
             node.put("publicKey", identity.publicKeyBase64());
             node.put("privateKey", identity.privateKeyBase64());
-            Files.writeString(
-                    path,
-                    MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING,
-                    StandardOpenOption.WRITE
-            );
-        } catch (Exception ignored) {}
+            saveStateJson(STATE_KEY_DEVICE_IDENTITY, node);
+        } catch (Exception e) {
+            logWarn("Falha ao salvar identidade do dispositivo no sqlite: " + safeMsg(e));
+        }
     }
 
     private static PairingState loadPairingState() {
-        Path path = pairingFilePath();
         try {
-            if (!Files.exists(path)) return null;
-            JsonNode node = MAPPER.readTree(Files.readString(path));
+            JsonNode node = loadStateJson(STATE_KEY_PAIRING);
             if (node == null || !node.isObject()) return null;
             return new PairingState(
                     text(node, "codeHash"),
@@ -929,37 +1313,67 @@ public final class KeeplyApi {
                     text(node, "expiresAt"),
                     text(node, "usedAt")
             );
-        } catch (Exception ignored) {
+        } catch (Exception e) {
+            logWarn("Falha ao ler pairing state no sqlite: " + safeMsg(e));
+        }
+
+        Path path = pairingFilePath(); // fallback/migracao legada
+        try {
+            if (!Files.exists(path)) return null;
+            JsonNode node = MAPPER.readTree(Files.readString(path, StandardCharsets.UTF_8));
+            if (node == null || !node.isObject()) return null;
+            PairingState legacy = new PairingState(
+                    text(node, "codeHash"),
+                    text(node, "salt"),
+                    text(node, "createdAt"),
+                    text(node, "expiresAt"),
+                    text(node, "usedAt")
+            );
+            savePairingState(legacy);
+            tryDeleteLegacyFile(path);
+            return legacy;
+        } catch (Exception e) {
+            logWarn("Falha ao ler pairing state legado: " + safeMsg(e));
             return null;
         }
     }
 
     private static void savePairingState(PairingState state) {
-        Path path = pairingFilePath();
         try {
-            Path parent = path.getParent();
-            if (parent != null) Files.createDirectories(parent);
             ObjectNode node = MAPPER.createObjectNode();
             putNullable(node, "codeHash", state.codeHash());
             putNullable(node, "salt", state.salt());
             putNullable(node, "createdAt", state.createdAt());
             putNullable(node, "expiresAt", state.expiresAt());
             putNullable(node, "usedAt", state.usedAt());
-            Files.writeString(
-                    path,
-                    MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING,
-                    StandardOpenOption.WRITE
-            );
-        } catch (Exception ignored) {}
+            saveStateJson(STATE_KEY_PAIRING, node);
+        } catch (Exception e) {
+            logWarn("Falha ao salvar pairing state no sqlite: " + safeMsg(e));
+        }
     }
 
     private static AgentLinkState loadAgentLinkState() {
-        Path path = agentStateFilePath();
+        try {
+            JsonNode node = loadStateJson(STATE_KEY_LINK);
+            if (node != null && node.isObject()) {
+                boolean paired = node.path("paired").asBoolean(false);
+                Long machineId = longOrNull(node, "machineId");
+                Long userId = longOrNull(node, "userId");
+                String userEmail = text(node, "userEmail");
+                String linkedAt = text(node, "linkedAt");
+                String lastSeenAt = text(node, "lastSeenAt");
+                String deviceId = text(node, "deviceId");
+                return new AgentLinkState(paired, machineId, userId, userEmail, linkedAt, lastSeenAt, deviceId);
+            }
+        } catch (Exception e) {
+            logWarn("Falha ao ler agent link state no sqlite: " + safeMsg(e));
+        }
+
+        Path path = agentStateFilePath(); // fallback/migracao legada
         try {
             if (!Files.exists(path)) return AgentLinkState.unpaired();
-            JsonNode node = MAPPER.readTree(Files.readString(path));
+            JsonNode node = MAPPER.readTree(Files.readString(path, StandardCharsets.UTF_8));
+
             boolean paired = node != null && node.path("paired").asBoolean(false);
             Long machineId = longOrNull(node, "machineId");
             Long userId = longOrNull(node, "userId");
@@ -967,17 +1381,18 @@ public final class KeeplyApi {
             String linkedAt = text(node, "linkedAt");
             String lastSeenAt = text(node, "lastSeenAt");
             String deviceId = text(node, "deviceId");
-            return new AgentLinkState(paired, machineId, userId, userEmail, linkedAt, lastSeenAt, deviceId);
-        } catch (Exception ignored) {
+            AgentLinkState legacy = new AgentLinkState(paired, machineId, userId, userEmail, linkedAt, lastSeenAt, deviceId);
+            saveAgentLinkState(legacy);
+            tryDeleteLegacyFile(path);
+            return legacy;
+        } catch (Exception e) {
+            logWarn("Falha ao ler agent link state legado: " + safeMsg(e));
             return AgentLinkState.unpaired();
         }
     }
 
     private static void saveAgentLinkState(AgentLinkState state) {
-        Path path = agentStateFilePath();
         try {
-            Path parent = path.getParent();
-            if (parent != null) Files.createDirectories(parent);
             ObjectNode node = MAPPER.createObjectNode();
             node.put("paired", state.paired());
             if (state.machineId() == null) node.putNull("machineId"); else node.put("machineId", state.machineId());
@@ -986,14 +1401,59 @@ public final class KeeplyApi {
             putNullable(node, "linkedAt", state.linkedAt());
             putNullable(node, "lastSeenAt", state.lastSeenAt());
             putNullable(node, "deviceId", state.deviceId());
-            Files.writeString(
-                    path,
-                    MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING,
-                    StandardOpenOption.WRITE
-            );
-        } catch (Exception ignored) {}
+            saveStateJson(STATE_KEY_LINK, node);
+        } catch (Exception e) {
+            logWarn("Falha ao salvar agent link state no sqlite: " + safeMsg(e));
+        }
+    }
+
+    private static JsonNode loadStateJson(String stateKey) {
+        if (isBlank(stateKey)) return null;
+        try {
+            ensureAgentStateStore();
+            try (Connection c = DatabaseBackup.openSingleConnection();
+                 PreparedStatement ps = c.prepareStatement("SELECT json_value FROM agent_state WHERE state_key = ? LIMIT 1")) {
+                ps.setString(1, stateKey);
+                try (ResultSet rs = ps.executeQuery()) {
+                    if (!rs.next()) return null;
+                    String raw = rs.getString(1);
+                    if (isBlank(raw)) return null;
+                    return MAPPER.readTree(raw);
+                }
+            }
+        } catch (Exception e) {
+            throw new IllegalStateException("Falha ao ler state_key=" + stateKey + " no sqlite: " + safeMsg(e), e);
+        }
+    }
+
+    private static void saveStateJson(String stateKey, JsonNode node) {
+        if (isBlank(stateKey) || node == null) return;
+        try {
+            ensureAgentStateStore();
+            String raw = MAPPER.writeValueAsString(node);
+            try (Connection c = DatabaseBackup.openSingleConnection();
+                 PreparedStatement ps = c.prepareStatement("""
+                         INSERT INTO agent_state(state_key, json_value, updated_at)
+                         VALUES(?, ?, datetime('now'))
+                         ON CONFLICT(state_key) DO UPDATE SET
+                           json_value=excluded.json_value,
+                           updated_at=datetime('now')
+                         """)) {
+                ps.setString(1, stateKey);
+                ps.setString(2, raw);
+                ps.executeUpdate();
+            }
+        } catch (Exception e) {
+            throw new IllegalStateException("Falha ao salvar state_key=" + stateKey + " no sqlite: " + safeMsg(e), e);
+        }
+    }
+
+    private static void tryDeleteLegacyFile(Path path) {
+        try {
+            if (path != null) Files.deleteIfExists(path);
+        } catch (Exception ignored) {
+            // cleanup best effort
+        }
     }
 
     private static PairingIssued issuePairingCode() {
@@ -1040,11 +1500,18 @@ public final class KeeplyApi {
         return out.toString();
     }
 
+    // sem regex (mais rápido e previsível)
     private static String normalizePairingCode(String code) {
         if (code == null) return null;
         String raw = code.trim().toUpperCase(Locale.ROOT);
         if (raw.isEmpty()) return null;
-        return raw.replaceAll("[^A-Z0-9]", "");
+
+        StringBuilder sb = new StringBuilder(raw.length());
+        for (int i = 0; i < raw.length(); i++) {
+            char c = raw.charAt(i);
+            if ((c >= 'A' && c <= 'Z') || (c >= '0' && c <= '9')) sb.append(c);
+        }
+        return sb.isEmpty() ? null : sb.toString();
     }
 
     private static String randomBase64Url(int numBytes) {
@@ -1065,7 +1532,7 @@ public final class KeeplyApi {
             String expectedSig = hmacSha256Base64Url(agentJwtSecret(), data);
             if (!timingSafeEquals(parts[2], expectedSig)) return Optional.empty();
 
-            JsonNode payload = MAPPER.readTree(new String(Base64.getUrlDecoder().decode(parts[1]), StandardCharsets.UTF_8));
+            JsonNode payload = MAPPER.readTree(Base64.getUrlDecoder().decode(parts[1]));
             String typ = text(payload, "typ");
             String sub = text(payload, "sub");
             long exp = payload == null ? 0 : payload.path("exp").asLong(0);
@@ -1151,26 +1618,22 @@ public final class KeeplyApi {
         Path path = agentJwtSecretFilePath();
         try {
             if (Files.exists(path)) {
-                JsonNode node = MAPPER.readTree(Files.readString(path));
+                JsonNode node = MAPPER.readTree(Files.readString(path, StandardCharsets.UTF_8));
                 String secret = text(node, "secret");
                 if (!isBlank(secret)) return secret;
             }
-        } catch (Exception ignored) {}
+        } catch (Exception e) {
+            logWarn("Falha ao ler agent jwt secret: " + safeMsg(e));
+        }
 
         String generated = randomBase64Url(48);
         try {
-            Path parent = path.getParent();
-            if (parent != null) Files.createDirectories(parent);
             ObjectNode node = MAPPER.createObjectNode();
             node.put("secret", generated);
-            Files.writeString(
-                    path,
-                    MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING,
-                    StandardOpenOption.WRITE
-            );
-        } catch (Exception ignored) {}
+            writeJsonAtomic(path, node);
+        } catch (Exception e) {
+            logWarn("Falha ao salvar agent jwt secret: " + safeMsg(e));
+        }
         return generated;
     }
 
@@ -1261,6 +1724,7 @@ public final class KeeplyApi {
     private static void bootstrapEnv() {
         try {
             Dotenv dotenv = Dotenv.configure().ignoreIfMissing().load();
+
             String dbUrl = Objects.requireNonNullElse(dotenv.get("DB_URL"), "jdbc:sqlite:keeply.db");
             if (isBlank(System.getProperty("DB_URL"))) System.setProperty("DB_URL", dbUrl);
 
@@ -1279,8 +1743,6 @@ public final class KeeplyApi {
         int port = 25420;
         String bind = "127.0.0.1";
         String token = System.getProperty("KEEPLY_API_TOKEN");
-        int httpWorkers = 8;
-        int scanWorkers = 2;
         int wsPort = 8091;
 
         if (args != null) {
@@ -1289,25 +1751,24 @@ public final class KeeplyApi {
                 if ("--port".equalsIgnoreCase(a) && i + 1 < args.length) port = tryInt(args[++i], port);
                 else if ("--bind".equalsIgnoreCase(a) && i + 1 < args.length) bind = args[++i];
                 else if ("--token".equalsIgnoreCase(a) && i + 1 < args.length) token = args[++i];
-                else if ("--http-workers".equalsIgnoreCase(a) && i + 1 < args.length) httpWorkers = tryInt(args[++i], httpWorkers);
-                else if ("--scan-workers".equalsIgnoreCase(a) && i + 1 < args.length) scanWorkers = tryInt(args[++i], scanWorkers);
                 else if ("--ws-port".equalsIgnoreCase(a) && i + 1 < args.length) wsPort = tryInt(args[++i], wsPort);
             }
         }
 
         port = Math.max(1, Math.min(65535, port));
-        httpWorkers = Math.max(2, Math.min(64, httpWorkers));
-        scanWorkers = Math.max(1, Math.min(16, scanWorkers));
         wsPort = Math.max(0, Math.min(65535, wsPort));
 
         boolean authEnabled = !isBlank(token);
-        return new Config(bind, port, authEnabled, token, httpWorkers, scanWorkers, wsPort);
+        // httpWorkers/scanWorkers ficaram desnecessários com virtual threads, mas mantemos no record por compatibilidade
+        return new Config(bind, port, authEnabled, token, 0, 0, wsPort);
     }
 
     private static int tryInt(String s, int fallback) {
         try { return Integer.parseInt(s.trim()); }
         catch (Exception e) { return fallback; }
     }
+
+    // ----------------- Records (DTO/config/state) -----------------
 
     private record Config(
             String bindHost,
@@ -1355,33 +1816,28 @@ public final class KeeplyApi {
     }
 
     static record AgentJwtClaims(String deviceId, long expEpochSeconds) {}
-
-    // ----------------- Job model -----------------
-
     private static final class ScanJob {
         private final String id;
         private final String root;
         private final String dest;
         private final Instant createdAt;
-
         private volatile Instant startedAt;
         private volatile Instant finishedAt;
-
-        private volatile String state; // created | running | success | failed | cancelled
+        private volatile Instant lastHeartbeatAt;
+        private volatile String state;
         private volatile Integer exitCode;
         private volatile String message;
-
         private final AtomicBoolean started = new AtomicBoolean(false);
+        private final AtomicBoolean terminal = new AtomicBoolean(false);
         private volatile Future<?> future;
-
         private ScanJob(String id, String root, String dest) {
             this.id = id;
             this.root = root;
             this.dest = dest;
             this.createdAt = Instant.now();
+            this.lastHeartbeatAt = this.createdAt;
             this.state = "created";
         }
-
         static ScanJob created(String id, String root, String dest) {
             return new ScanJob(id, root, dest);
         }
@@ -1400,31 +1856,37 @@ public final class KeeplyApi {
         }
 
         void markRunning() {
-            if (started.compareAndSet(false, true)) {
+            if (!terminal.get() && started.compareAndSet(false, true)) {
                 this.startedAt = Instant.now();
+                this.lastHeartbeatAt = this.startedAt;
                 this.state = "running";
             }
         }
 
-        void markSuccess() {
-            this.state = "success";
-            this.exitCode = 0;
-            this.finishedAt = Instant.now();
-            this.message = "ok";
+        void touch() {
+            this.lastHeartbeatAt = Instant.now();
         }
 
-        void markCancelled(String msg) {
-            this.state = "cancelled";
-            this.exitCode = null;
-            this.finishedAt = Instant.now();
-            this.message = msg;
+        boolean markSuccess() {
+            return finish("success", 0, "ok");
         }
 
-        void markFailed(int exitCode, String msg) {
-            this.state = "failed";
-            this.exitCode = exitCode;
+        boolean markCancelled(String msg) {
+            return finish("cancelled", null, msg);
+        }
+
+        boolean markFailed(Integer exitCode, String msg) {
+            return finish("failed", exitCode, msg);
+        }
+
+        private boolean finish(String newState, Integer newExitCode, String newMessage) {
+            if (!terminal.compareAndSet(false, true)) return false;
+            this.state = newState;
+            this.exitCode = newExitCode;
             this.finishedAt = Instant.now();
-            this.message = msg;
+            this.lastHeartbeatAt = this.finishedAt;
+            this.message = newMessage;
+            return true;
         }
 
         ObjectNode toJson() {
@@ -1440,6 +1902,7 @@ public final class KeeplyApi {
 
             if (startedAt == null) job.putNull("startedAt"); else job.put("startedAt", startedAt.toString());
             if (finishedAt == null) job.putNull("finishedAt"); else job.put("finishedAt", finishedAt.toString());
+            if (lastHeartbeatAt == null) job.putNull("lastHeartbeatAt"); else job.put("lastHeartbeatAt", lastHeartbeatAt.toString());
             if (exitCode == null) job.putNull("exitCode"); else job.put("exitCode", exitCode);
             if (message == null) job.putNull("message"); else job.put("message", message);
 
